--- a/css/index.css
+++ b/css/index.css
@@ -69,9 +69,9 @@ a.pull-right {
     float: right;
     color: #fff;
     font-size: 1.5em;
-    position: absolute;
-    top: 18%;
-    left: 64%;
+    position: fixed;
+    top: 0.85%;
+    left: 62%;
 }
 
 #toast {
@@ -203,4 +203,8 @@ a.pull-right {
         bottom: 60px;
         opacity: 0;
     }
+}
+
+span i {
+    margin-right: 1%;
 }
