--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,6 @@ body {
     height: 100%;
     width: 100%;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: bold;
     font-size: 110%;
 }
 
@@ -17,7 +16,8 @@ h4 {
     margin-top: 3%;
     margin-left: 4.5%;
     margin-bottom: 2.4%;
-    font-size: 135%;
+    font-size: 138%;
+    font-weight: bolder !important;
 }
 
 button {
