Commit to revamp the UI

--- a/css/index.css
+++ b/css/index.css
@@ -1,263 +1,275 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 110%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 110%;
 }
 
 p {
-    font-size: 110%;
+  font-size: 110%;
 }
 
 h4 {
-    margin-top: 3%;
-    margin-left: 4.5%;
-    margin-bottom: 2.4%;
-    font-size: 138%;
-    font-weight: bolder !important;
+  margin-top: 3%;
+  margin-left: 4.5%;
+  margin-bottom: 2.4%;
+  font-size: 138%;
+  font-weight: bolder !important;
 }
 
 button {
-    font-size: 1.5em;
-    margin-left: 4%;
+  font-size: 1.5em;
+  margin-left: 4%;
+}
+
+.walmart-icon {
+  height: 1.5em;
+}
+
+.iconStyle {
+  height: 1.2em;
+  position: relative;
+  right: 0.2em;
+  bottom: 0.15em;
+  margin-right: 0.2em;
 }
 
 #weatherContent {
-    margin-left: 4.5%;
+  margin-left: 4.5%;
 }
 
 #loading {
-    top: 0;
-    left: 0;
-    position: fixed;
-    display: block;
-    opacity: 0.7;
-    background-color: #fff;
-    z-index: 99;
-    text-align: center;
+  top: 0;
+  left: 0;
+  position: fixed;
+  display: block;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 99;
+  text-align: center;
 }
 
 #loading-image {
-    margin: auto;
-    max-width: 50%;
-    position: fixed;
-    top: 60%;
-    left: 35%;
-    /*top: 215px;
-    left: 470px;*/
-    z-index: 100;
+  margin: auto;
+  max-width: 50%;
+  position: fixed;
+  top: 60%;
+  left: 35%;
+  z-index: 100;
 }
 
 .marginRightTwoPercent {
-    margin-right: 2% !important;
+  margin-right: 2% !important;
 }
 
 a.pull-right {
-    float: right;
-    color: #fff;
-    font-size: 1.5em;
-    position: fixed;
-    top: 0.85%;
-    left: 62%;
+  float: right;
+  color: #fff;
+  font-size: 1.5em;
+  position: fixed;
+  top: 0.85%;
+  left: 62%;
 }
 
 #toast {
-    visibility: hidden;
-    height: 40px;
-    /*margin-left: -125px;*/
-    max-width: 100%;
-    margin: auto;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    border-radius: 2px;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    right: 0;
-    bottom: 30px;
-    white-space: nowrap;
+  visibility: hidden;
+  height: 40px;
+  /*margin-left: -125px;*/
+  max-width: 100%;
+  margin: auto;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  bottom: 30px;
+  white-space: nowrap;
 }
 
 #toast #desc {
-    color: #fff;
-    overflow: hidden;
-    white-space: nowrap;
+  color: #fff;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 #toast.show {
-    visibility: visible;
-    -webkit-animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 2s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 4s, fadeout 0.5s 4.5s;
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 2s,
+    fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 4s,
+    fadeout 0.5s 4.5s;
 }
 
 @-webkit-keyframes fadein {
-    from {
-        bottom: 0;
-        opacity: 0;
-    }
-    to {
-        bottom: 30px;
-        opacity: 1;
-    }
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
 }
 
 @keyframes fadein {
-    from {
-        bottom: 0;
-        opacity: 0;
-    }
-    to {
-        bottom: 30px;
-        opacity: 1;
-    }
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes expand {
-    from {
-        min-width: 50px
-    }
-    to {
-        min-width: 350px
-    }
+  from {
+    min-width: 50px;
+  }
+  to {
+    min-width: 350px;
+  }
 }
 
 @keyframes expand {
-    from {
-        min-width: 50px
-    }
-    to {
-        min-width: 350px
-    }
+  from {
+    min-width: 50px;
+  }
+  to {
+    min-width: 350px;
+  }
 }
 
 @-webkit-keyframes stay {
-    from {
-        min-width: 350px
-    }
-    to {
-        min-width: 350px
-    }
+  from {
+    min-width: 350px;
+  }
+  to {
+    min-width: 350px;
+  }
 }
 
 @keyframes stay {
-    from {
-        min-width: 350px
-    }
-    to {
-        min-width: 350px
-    }
+  from {
+    min-width: 350px;
+  }
+  to {
+    min-width: 350px;
+  }
 }
 
 @-webkit-keyframes shrink {
-    from {
-        min-width: 350px;
-    }
-    to {
-        min-width: 50px;
-    }
+  from {
+    min-width: 350px;
+  }
+  to {
+    min-width: 50px;
+  }
 }
 
 @keyframes shrink {
-    from {
-        min-width: 350px;
-    }
-    to {
-        min-width: 50px;
-    }
+  from {
+    min-width: 350px;
+  }
+  to {
+    min-width: 50px;
+  }
 }
 
 @-webkit-keyframes fadeout {
-    from {
-        bottom: 30px;
-        opacity: 1;
-    }
-    to {
-        bottom: 60px;
-        opacity: 0;
-    }
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 60px;
+    opacity: 0;
+  }
 }
 
 @keyframes fadeout {
-    from {
-        bottom: 30px;
-        opacity: 1;
-    }
-    to {
-        bottom: 60px;
-        opacity: 0;
-    }
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 60px;
+    opacity: 0;
+  }
 }
 
 span i {
-    margin-right: 1%;
+  margin-right: 1%;
 }
 
 .degreeCelsius {
-    font-size: 0.9em;
-    font-weight: 600;
+  font-size: 0.9em;
+  font-weight: 600;
 }
 
 .paddingFivePixels {
-    padding: 5px;
+  padding: 5px;
 }
 
 .widthEightPoint33Percent {
-    width: 8.33%;
+  width: 8.33%;
 }
 
 @media screen and (max-width: 768px) {
-    h4 {
-        font-size: 90%;
-    }
+  h4 {
+    font-size: 90%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    html {
-        font-size: 80%;
-    }
+  html {
+    font-size: 80%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    img#weatherDescriptionImage {
-        max-width: 25%;
-        height: auto;
-    }
+  img#weatherDescriptionImage {
+    max-width: 25%;
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    #loading-image {
-        max-width: 30%;
-        height: auto;
-    }
+  #loading-image {
+    max-width: 30%;
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    #desc {
-        font-size: 60%;
-    }
+  #desc {
+    font-size: 60%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    #toast {
-        height: 20px;
-        font-size: 105%;
-    }
+  #toast {
+    height: 20px;
+    font-size: 105%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    h1 {
-        font-size: 80%;
-    }
+  h1 {
+    font-size: 80%;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    .table-responsive {
-        position: relative;
-        height: 90vh;
-        width: 90vw;
-    }
+  .table-responsive {
+    position: relative;
+    height: 90vh;
+    width: 90vw;
+  }
 }
